# osm2geojson

./: .cursorrules  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AI_AGENT_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT_QUICKSTART.md  LICENSE  MANIFEST.in  MIGRATION_NOTES.md  MODERNIZATION.md  Makefile  README.md  RELEASE_GUIDE.md  bump_version.sh  lint.sh  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  staffordshire-output.geojson  test-osm.py  test.py  test_build.sh  update-osm-polygon-features.sh  update-osm-poygon-features.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pythonpackagetest.yml  pythonpublish.yml
osm2geojson/: __init__.py  __main__.py  areaKeys.json  helpers.py  main.py  parse_xml.py  polygon-features.json
test/: parse_xml.py
test/data/: way.json
tests/: __init__.py  conftest.py  main.py  parse_xml.py  test_issue_54.py  test_main.py  test_parse_xml.py  test_polygon_logic.py
tests/data/: barrier-wall.geojson  barrier-wall.osm  center-feature.geojson  center-feature.json  issue-16.geojson  issue-16.json  issue-35.geojson  issue-35.json  issue-4.geojson  issue-4.osm  issue-52-highway-service-closed.geojson  issue-52-highway-service-closed.json  issue-54-staffordshire.osm  issue-6.geojson  issue-6.json  issue-7.geojson  issue-7.json  issue-9-all.geojson  issue-9.geojson  issue-9.json  map.geojson  map.json  map.osm  meta.geojson  meta.json  node.geojson  node.json  relation.geojson  relation.json  way.geojson
